[package]
name = "elusion"
version = "3.11.0"
edition = "2021"
authors = ["Borivoj Grujicic <borivoj.grujicic@gmail.com>"]
description = "Elusion is a modern DataFrame / Data Engineering / Data Analysis library that combines the familiarity of DataFrame operations (like those in PySpark, Pandas, and Polars) with the power of SQL query building. It provides flexible query construction without enforcing strict operation ordering, enabling developers to write intuitive and maintainable data transformations."
license = "MIT"
repository = "https://github.com/DataBora/elusion"
homepage = "https://github.com/DataBora/elusion"
documentation = "https://docs.rs/elusion"
readme = "README.md"
keywords = ["data", "engineering", "dataframe", "analysis"]
categories = ["data-structures"]

[dependencies]
datafusion = "43.0.0"
deltalake = "0.23.0"
arrow = "=53.2.0"
chrono = "=0.4.38" #arrow-arith has same Quarter function
tokio = { version = "1.45.0", features = ["rt-multi-thread"] }
futures = "0.3.31"
regex = "1.11.1"
encoding_rs = "0.8.35"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
object_store = "0.11.2"
plotly = { version = "0.12.1", optional = true }
lazy_static = "1.5.0"
azure_storage_blobs = { version = "0.21.0", optional = true }
azure_storage = { version = "0.21.0", optional = true }
base64 = "0.22.1"
csv = "1.1"
tokio-cron-scheduler = "0.13.0"
bytes = "1.10.0"
num_cpus = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true}
urlencoding = {version = "2.1.3", optional = true}
tempfile = "3.16.0"
ring = ">=0.17.12"
tokio-postgres = { version = "0.7.13", optional = true }
rust_decimal = { version = "1.32", features = ["db-postgres"], optional = true }
mysql_async = { version = "0.32.2", default-features = false, features = ["minimal"], optional = true}
rust_xlsxwriter = {version = "0.87.0", optional = true}
calamine = "0.23.1"

[features]
default = []
dashboard = ["dep:plotly"]
api = ["dep:reqwest", "dep:urlencoding"]
azure = ["dep:azure_storage_blobs", "dep:azure_storage"]
postgres = ["dep:tokio-postgres", "dep:rust_decimal"]
mysql = ["dep:mysql_async"]
excel = ["dep:rust_xlsxwriter"]
all = ["dashboard", "api", "azure", "postgres", "mysql","excel"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[lib]
name = "elusion"
path = "src/elusion.rs"

[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = "=0.10.72" #security fix